--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ description: 修学储能 以行践言
 avatar: https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1559930702752&di=3bd805156df77a8b2c2fdff610e7d066&imgtype=0&src=http%3A%2F%2Fimg.duoziwang.com%2F2018%2F01%2F2023550638025.jpg
 
 # 你的favicon（出现在浏览器tab上）图片URL，建议使用较小(64px × 64px)的图片
-favicon: https://raw.githubusercontent.com/FromEndWorld/LOFFER/master/images/favicon.png
+favicon: 
 
 
 # 菜单中的按钮
